<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.netgalaxystudios.intern.signupform.LoginActivity">

    <LinearLayout
        android:id="@+id/fields"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/username_label"
                android:text="@string/username_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/username_input"
                android:hint="@string/username_input"
                android:layout_toRightOf="@id/username_label"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/password_label"
                android:text="@string/password_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/password_input"
                android:hint="@string/password_input"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/confirmation_label"
                android:text="@string/password_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/confirmatin_input"
                android:hint="@string/password_confirmation"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_below="@id/fields"
        android:layout_alignRight="@id/fields"
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
